# mfu_ocr

./: .gitignore  Makefile  README.md  _debug_trace.py  _diag.py  _test_regex.py  pyproject.toml
config/: skip_pages.txt
docs/: roadmap.md
scripts/: check_env.py
src/ocr_hailo/: __init__.py  __main__.py  api.py  cli.py  diagnostics.py  extraction.py  geo_api.py  hailo_ocr.py  metadata.py  table_detection.py
tests/: test_diagnostics.py  test_extraction.py  test_metadata.py
